# biz/dal/models/product_cate_md.go
@@ -1,0 +1,13 @@
+package models
+
+type ProductCateMD struct {
+	ProductID string `db:"product_id" json:"product_id"`
+	CateID    string `db:"category_id" json:"category_id"`
+}
+
+func (current *ProductCateMD) AllowedUpdateFields(req *ProductCateMD) *ProductCateMD {
+	return &ProductCateMD{
+		ProductID: req.ProductID,
+		CateID:    req.CateID,
+	}
+}
