# server/reviews/reviews.get_handler.go
@@ -1,0 +1,45 @@
+/* !!
+ * Code generated by fkit
+ * If you need to write additional functions, should create a separate file.
+ * File Created: Sunday, 27 April 2025 16:48:24 +07:00
+ * Author: VietLD (leduyviet2612@gmail.com)
+ * -----
+ * Last Modified: Sunday, 27 April 2025 16:48:24 +07:00
+ * Modified By: HIEUBV\hieubv
+ * -----
+ * Copyright 2025. All rights reserved.
+ */
+
+package reviews
+
+import (
+	"github.com/bachhieu/fountain/baselib/base"
+	"github.com/bachhieu/fountain/baselib/v_log"
+	"github.com/bachhieu/fountain/baselib/v_net/v_api"
+	"github.com/bachhieu/fountain/proto/v_proto"
+	"github.com/bachhieu/test/biz/dal/do/review_do"
+	"github.com/gofiber/fiber/v2"
+)
+
+// @Summary      Get Review
+// @Description  Get list of Review with optional filters
+// @Tags         Review
+// @Accept       json
+// @Produce      json
+// @Param        Authorization  header    string  true   "Insert your access token" default(access_token)
+// @Param        id     query     string  true  "ID of the Review"
+// @Success      200          {object}  v_api.Response[review_do.ReviewResponse]
+// @Failure      400          {object}  v_proto.VolioRpcError
+// @Failure      500          {object}  v_proto.VolioRpcError
+// @Router       /admin/reviews/detail [get]
+func (api *ReviewsAPI) Get(ctx *fiber.Ctx) error {
+	id := ctx.Query("id", "")
+	if id == "" {
+		return v_api.WriteError(ctx, v_proto.NewRpcError(int32(v_proto.VolioRpcErrorCodes_BAD_REQUEST), "id is required"))
+	}
+	res := api.reviewsController.Get(id)
+
+	v_log.V(3).Infof("ReviewsAPI::Get - Reply: %s", base.JSONDebugDataString(res))
+
+	return v_api.WriteSuccess(ctx, review_do.NewReviewResponse(res))
+}
