# server/reviews/reviews.update_handler.go
@@ -1,0 +1,51 @@
+/* !!
+ * Code generated by fkit
+ * If you need to write additional functions, should create a separate file.
+ * File Created: Sunday, 27 April 2025 16:48:24 +07:00
+ * Author: VietLD (leduyviet2612@gmail.com)
+ * -----
+ * Last Modified: Sunday, 27 April 2025 16:48:24 +07:00
+ * Modified By: HIEUBV\hieubv
+ * -----
+ * Copyright 2025. All rights reserved.
+ */
+
+package reviews
+
+import (
+	"github.com/bachhieu/fountain/baselib/v_log"
+	"github.com/bachhieu/fountain/baselib/v_net/v_api"
+	"github.com/bachhieu/fountain/proto/v_proto"
+	"github.com/bachhieu/test/biz/dal/do/review_do"
+	"github.com/gofiber/fiber/v2"
+)
+
+// @Summary      Update Review
+// @Description  Update an existing Review
+// @Tags         Review
+// @Accept       json
+// @Produce      json
+// @Param        Authorization  header    string                           true  "Insert your access token" default(access_token)
+// @Param        request       body      review_do.UpdateReviewReq  true  "Update Review request"
+// @Success      200          {object}  v_api.Response[review_do.ReviewResponse]
+// @Failure      400          {object}  v_proto.VolioRpcError
+// @Failure      500          {object}  v_proto.VolioRpcError
+// @Router       /admin/reviews [put]
+func (api *ReviewsAPI) Update(ctx *fiber.Ctx) error {
+	input := &review_do.UpdateReviewReq{}
+
+	if err := ctx.BodyParser(input); err != nil {
+		err := v_proto.NewRpcError(int32(v_proto.VolioRpcErrorCodes_BAD_REQUEST), err.Error())
+		v_log.V(1).WithError(err).Errorf("ReviewsAPI::Update - Error: %+v", err)
+		return v_api.WriteError(ctx, err)
+	}
+
+	if err := api.reviewsController.Update(input); err != nil {
+		v_log.V(1).WithError(err).Errorf("ReviewsAPI::Update - Error: %+v", err)
+		return v_api.WriteError(ctx, err)
+	}
+
+	v_log.V(3).Infof("ReviewsAPI::Update - Reply: Oke")
+
+	return v_api.WriteSuccess(ctx, input)
+}
